.bird_top_wraper.transparent .breadcrumbs_wraper bg_color fix.

--- a/static/css/birdapp657/birdapp.css
+++ b/static/css/birdapp657/birdapp.css
@@ -196,6 +196,7 @@ li.bird_menu_child {
 }
 .bird_top_wraper.transparent .breadcrumbs_wraper {
     color: white;
+    background-color: transparent;
     border-top: solid 1px white;
     border-bottom: solid 1px white;
 }
